--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".OnClickActivity"></activity>
+        <activity android:name=".ShareWithFriendsActivity"></activity>
+        <activity android:name=".OnClickActivity" />
         <activity android:name=".MovieListActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
